--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,13 +1,23 @@
-
-  name: garry
-  version: '0.1' # just for humans, typically '1.2+git' or '1.3.2'
-  summary: A robot snail that will inevitably kill all humans  # 79 char long summary
-  description: Its not quite ready for that though.
-  grade: devel # must be 'stable' to release into candidate/stable channels
-  confinement: devmode # use 'strict' once you have the right plugs and slots
-
-  parts:
-    my-part:
-      # See 'snapcraft plugins'
-      plugin: nil
+name: garry
+version: '0.1'
+summary: A robot snail that will inevitably kill all humans
+description: |
+Its not quite ready for that though.
   
+grade: devel
+confinement: strict
+
+parts:
+  workspace:
+    plugin: catkin
+    rosdistro: melodic
+    catkin-packages: [garry]
+  
+apps:
+  roscore:
+    command: roscore
+    plugs: [network, network-bind]
+  
+  roslaunch:
+    command: roslaunch garry arduino.launch
+    plugs: [network, network-bind]
