--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,13 +1,16 @@
 name: garry
 version: '0.1'
 summary: A robot snail that will inevitably kill all humans
-description: Its not quite ready for that though.
+description: |
+  Its not quite ready for that though.
   
 grade: devel
-confinement: strict
+confinement: devmode
 
 parts:
   workspace:
+    source: http://github.com/braineniac/garry.git
+    source-branch: devel
     plugin: catkin
     rosdistro: melodic
     catkin-packages: [garry]
