--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -11,9 +11,10 @@ parts:
   workspace:
     source: http://github.com/braineniac/garry.git
     source-branch: master
+    source-space: ctr_arduino/
     plugin: catkin
     rosdistro: kinetic
-    catkin-packages: [garry]
+    catkin-packages: [ctr_arduino]
   
 apps:
   roscore:
@@ -21,5 +22,5 @@ apps:
     plugs: [network, network-bind]
   
   roslaunch:
-    command: roslaunch garry arduino.launch
+    command: roslaunch ctr_arduino arduino.launch
     plugs: [network, network-bind]
