--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -10,7 +10,7 @@ build-packages: [lsb-release]
 parts:
   workspace:
     source: https://github.com/braineniac/garry.git
-    source-branch: master
+    source-branch: kinetic-devel
     source-space: ctr_arduino/
     plugin: catkin
     rosdistro: kinetic
