--- a/garry-robot/package.xml
+++ b/garry-robot/package.xml
@@ -1,31 +1,31 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>ctr_arduino</name>
-  <version>0.0.1</version>
-  <description>The ctr_arduino package</description>
+  <name>garry-robot</name>
+  <version>0.0.0</version>
+  <description>The garry-robot package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="braineniac@protonmail.com">braineniac</maintainer>
+  <maintainer email="dan@todo.todo">dan</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>MPL-2</license>
+  <license>TODO</license>
 
 
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/ctr_arduino</url> -->
+  <!-- <url type="website">http://wiki.ros.org/garry-robot</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
   <!-- Authors do not have to be maintainers, but could be -->
   <!-- Example: -->
-  <author email="braineniac@protonmail.com">Daniel Hammer</author> -->
+  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
 
 
   <!-- The *depend tags are used to specify dependencies -->
@@ -49,17 +49,19 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>roscpp</build_depend>
-  <build_depend>roslaunch</build_depend>
-  <build_depend>std_msgs</build_depend>
-   <build_depend>message_generation</build_depend>
-  <build_export_depend>roscpp</build_export_depend>
-  <build_export_depend>roslaunch</build_export_depend>
-  <build_export_depend>std_msgs</build_export_depend>
-  <exec_depend>roscpp</exec_depend>
-  <exec_depend>roslaunch</exec_depend>
-  <exec_depend>std_msgs</exec_depend>
-  <exec_depend>message_runtime</exec_depend>
+  <build_depend>cpp</build_depend>
+  <build_depend>joy</build_depend>
+  <build_depend>rospy</build_depend>
+  <build_depend>twist</build_depend>
+  <build_export_depend>cpp</build_export_depend>
+  <build_export_depend>joy</build_export_depend>
+  <build_export_depend>rospy</build_export_depend>
+  <build_export_depend>twist</build_export_depend>
+  <exec_depend>cpp</exec_depend>
+  <exec_depend>joy</exec_depend>
+  <exec_depend>rospy</exec_depend>
+  <exec_depend>twist</exec_depend>
+
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
